--- a/app/package.json
+++ b/app/package.json
@@ -10,13 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bip39": "^3.0.4",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
